fixed toolbar from overlapping content and preventing selection

--- a/src/css/_vender/_startbootstrap-simple-sidebar.scss
+++ b/src/css/_vender/_startbootstrap-simple-sidebar.scss
@@ -22,16 +22,17 @@
     z-index: 1001;
     position: fixed;
     display: block;
-
     top: 0;
     left: 0px;
     padding-left: $base-padding;
-
     height: $topbar-height;
     line-height: $topbar-height;
     width: 100%;
+    pointer-events: none;
 
-
+    > * {
+        pointer-events: auto;
+    }
 
     .topbar-brand {
         font-size: 18px;
